# video-transcript-matcher

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
