[project]
name = "video-transcript-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.5.0",
    "opencv-python>=4.12.0.88",
    "pydub>=0.25.1",
    "rich>=14.2.0",
]
